--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-/src/environments/parametros.ts
+src/environments/parametros.ts
+dist/
 
 # compiled output
-/dist
 /tmp
 
 # dependencies
@@ -34,8 +34,3 @@ testem.log
 #System Files
 .DS_Store
 Thumbs.db
-src/app/administracion/materiales/shared/
-src/app/administracion/shared/
-src/app/inventario/movimientos/shared/
-src/app/panel/shared/
-src/assets/css/
