--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 src/environments/parametros.ts
-dist/
+/dist/
 
 # compiled output
 /tmp
